--- a/css/videolayout_default.css
+++ b/css/videolayout_default.css
@@ -21,6 +21,7 @@
     z-index: 5;
     transition: bottom 2s;
     overflow: visible !important;
+    font-size: 0pt; /*!!!Removes the gap between the local video container and the remote videos.*/
 }
 
 #remotevideos.hidden {
@@ -38,9 +39,9 @@
     display: none;
     background-color: black;
     background-size: contain;
-    border-radius:8px;
-    border: 2px solid #212425;
-    margin-right: 3px;
+    border-radius:1px;
+    border: 1px solid #212425;
+    /*margin-right: 1px;*/
 }
 
 #remoteVideos .videocontainer:hover,
@@ -58,24 +59,24 @@
 
 #remoteVideos .videocontainer:hover {
     box-shadow:  inset 0 0 10px #FFFFFF, 0 0 10px #FFFFFF;
-    border: 2px solid #FFFFFF;
+    border: 1px solid #FFFFFF;
 }
 
 #remoteVideos .videocontainer.videoContainerFocused {
     box-shadow: inset 0 0 28px #006d91;
-    border: 2px solid #006d91;
+    border: 1px solid #006d91;
 }
 
 #remoteVideos .videocontainer.videoContainerFocused:hover {
     box-shadow: inset 0 0 5px #FFFFFF, 0 0 10px #FFFFFF, inset 0 0 60px #006d91;
-    border: 2px solid #FFFFFF;
+    border: 1px solid #FFFFFF;
 }
 
 #localVideoWrapper {
     display:inline-block;
-    -webkit-mask-box-image: url(../images/videomask.svg);
-    border-radius:4px !important;
-    border: 0px !important;
+    /*-webkit-mask-box-image: url(../images/videomask.svg);*/
+    /*border-radius:1px !important;*/
+    /*border: 0px !important;*/
 }
 
 /* With TemasysWebRTC plugin <object/> element is used
@@ -83,7 +84,7 @@
 #remoteVideos .videocontainer>video,
 #remoteVideos .videocontainer>object {
     cursor: hand;
-    border-radius:4px;
+    border-radius:1px;
 }
 
 .flipVideoX {
@@ -96,7 +97,7 @@
 #localVideoWrapper>video,
 #localVideoWrapper>object {
     cursor: hand;
-    border-radius:4px !important;
+    border-radius:1px !important;
 }
 
 #largeVideo,
@@ -177,7 +178,7 @@
     overflow: hidden;
     white-space: nowrap;
     z-index: 2;
-    border-radius:20px;
+    border-radius:3px;
 }
 
 .videocontainer>span.status {
@@ -196,7 +197,7 @@
     overflow: hidden;
     white-space: nowrap;
     z-index: 2;
-    border-radius:20px;
+    border-radius:3px;
 }
 
 .connectionindicator
@@ -371,8 +372,7 @@
     height:38px;
     width:auto;
     background-color: rgba(0,0,0,0.8);
-    border: 1px solid rgba(256, 256, 256, 0.2);
-    border-radius: 6px;
+    border-radius: 1px;
     pointer-events: auto;
 }
 
@@ -395,7 +395,7 @@
     display: inline-block;
     position: absolute;
     z-index: 0;
-    border-radius:10px;
+    border-radius:1px;
     pointer-events: none;
 }
 
